init proto & hotel

--- a/proto/buf.gen.yaml
+++ b/proto/buf.gen.yaml
@@ -29,7 +29,7 @@ plugins:
       - nestJs=true
       - useOptionals=all
   - plugin: buf.build/community/stephenh-ts-proto
-    out: ../hero-api/src/stubs
+    out: ../hotel-api/src/stubs
     opt:
       - addGrpcMetadata=true
       - nestJs=true
